<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recyclerCita"
    android:layout_width="match_parent"
    android:layout_height="175dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    card_view:cardUseCompatPadding="true"
    card_view:cardElevation="4dp"
    card_view:cardCornerRadius="3dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_margin="6dp">

    <!--Indicador de estado-->

    <View
        android:id="@+id/indicatorStatus"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#E0E0E0"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dateAppointment"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/COD"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/codeAppointment"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tvCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/code"
                    android:gravity="center|end"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>




        </LinearLayout>



        <TextView
            android:id="@+id/tvNameDoctors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Manuel Quinteros"
            android:textAppearance="@android:style/TextAppearance" />


        <!--<TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance"
            android:text="Status"/>-->




        <TextView
            android:id="@+id/tvSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Schedule" />

        <TextView
            android:id="@+id/tvSpecialty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Specialty"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/imgStatus"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cancelar" />

            <Button
                android:id="@+id/btnPrintReport"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Imprimir" />

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>